# torch-cosine-annealing

./: LICENSE  pyproject.toml  readme.md
.github/workflows/: deploy-to-pypi.yml  test-and-deploy.yml  unit-test.yml
src/torch_cosine_annealing/: __init__.py  cosine_annealing_with_warm_restarts.py
tests/: test_cosine_annealing_with_warm_restarts.py
torch_cosine_annealing/: __init__.py  cosine_annealing_with_warm_restarts.py
